--- a/css/kasper.css
+++ b/css/kasper.css
@@ -204,7 +204,7 @@ header nav .form i {
 
 /* Start Landing */
 .landing {
-  background-image: url(../images/landing.jpg);
+  background-image: url("../images/landing.jpg");
   background-size: cover;
   min-height: 100vh;
   position: relative;
