--- a/css/kasper.css
+++ b/css/kasper.css
@@ -20,13 +20,6 @@ body {
 ul {
   list-style: none;
 }
-.tru {
-  display: block;
-}
-
-.fal {
-  display: none;
-}
 
 .container {
   padding-left: 15px;
@@ -211,7 +204,7 @@ header nav .form i {
 
 /* Start Landing */
 .landing {
-  background-image: url("../images/landing.jpg");
+  background-image: url("./images/landing.jpg");
   background-size: cover;
   min-height: 100vh;
   position: relative;
@@ -325,6 +318,8 @@ header nav .form i {
 
 .services .services-container .srv-box .text h3 {
   margin-bottom: 10px;
+  margin-left: 21px;
+
   color: var(--main-color);
 }
 
@@ -338,7 +333,6 @@ header nav .form i {
 
 @media (max-width: 767px) {
   .services .services-container .srv-box {
-
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -358,7 +352,7 @@ header nav .form i {
   padding-top: 60px;
   padding-bottom: 60px;
   height: 600px;
-  background-image: url("../images/design-features.jpg");
+  background-image: url("./images/design-features.jpg");
   background-size: cover;
   display: flex;
   align-items: center;
@@ -435,6 +429,7 @@ header nav .form i {
 
 .portfolio .shuffle li {
   padding: 10px;
+  cursor: pointer;
 }
 
 .portfolio .shuffle li.active {
@@ -453,6 +448,7 @@ header nav .form i {
 .portfolio .imgs-container .box img {
   width: 100%;
   transition: 0.3s;
+  height: 250px;
 }
 .portfolio .imgs-container .box {
   position: relative;
@@ -571,7 +567,7 @@ header nav .form i {
   padding-top: 60px;
   padding-bottom: 60px;
   text-align: center;
-  background-image: url("../images/landing.jpg");
+  background-image: url("./images/landing.jpg");
   background-size: cover;
   position: relative;
 }
@@ -763,7 +759,7 @@ header nav .form i {
 .quote {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("../images/quote.jpg");
+  background-image: url("./images/quote.jpg");
   background-size: cover;
   position: relative;
   text-align: center;
@@ -867,8 +863,6 @@ header nav .form i {
   text-decoration: none;
   border: 1px solid var(--main-color);
   width: fit-content;
-      color: var(--main-color);
-
 }
 .pricing .contact-text {
   text-align: center;
@@ -891,7 +885,7 @@ header nav .form i {
 .subscribe {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("../images/subscribe.jpg");
+  background-image: url("./images/subscribe.jpg");
   background-size: cover;
   position: relative;
   color: white;
@@ -1064,7 +1058,7 @@ header nav .form i {
 .footer {
   padding-top: 50px;
   padding-bottom: 50px;
-  background-image: url("../images/subscribe.jpg");
+  background-image: url("./images/subscribe.jpg");
   background-size: cover;
   position: relative;
   color: white;
@@ -1110,6 +1104,7 @@ header nav .form i {
   color: var(--main-color);
 }
 /* End Footer */
+
 /* Start scrool */
 
 .scrool {
@@ -1132,3 +1127,11 @@ header nav .form i {
   cursor: pointer;
 }
 /* End scrool */
+
+.tru {
+  display: block;
+}
+
+.fal {
+  display: none;
+}
