--- a/css/kasper.css
+++ b/css/kasper.css
@@ -204,7 +204,7 @@ header nav .form i {
 
 /* Start Landing */
 .landing {
-  background-image: url("./images/landing.jpg");
+  background-image: url("../images/landing.jpg");
   background-size: cover;
   min-height: 100vh;
   position: relative;
@@ -352,7 +352,7 @@ header nav .form i {
   padding-top: 60px;
   padding-bottom: 60px;
   height: 600px;
-  background-image: url("./images/design-features.jpg");
+  background-image: url("../images/design-features.jpg");
   background-size: cover;
   display: flex;
   align-items: center;
@@ -567,7 +567,7 @@ header nav .form i {
   padding-top: 60px;
   padding-bottom: 60px;
   text-align: center;
-  background-image: url("./images/landing.jpg");
+  background-image: url("../images/landing.jpg");
   background-size: cover;
   position: relative;
 }
@@ -759,7 +759,7 @@ header nav .form i {
 .quote {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("./images/quote.jpg");
+  background-image: url("../images/quote.jpg");
   background-size: cover;
   position: relative;
   text-align: center;
@@ -885,7 +885,7 @@ header nav .form i {
 .subscribe {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-image: url("./images/subscribe.jpg");
+  background-image: url("../images/subscribe.jpg");
   background-size: cover;
   position: relative;
   color: white;
@@ -1058,7 +1058,7 @@ header nav .form i {
 .footer {
   padding-top: 50px;
   padding-bottom: 50px;
-  background-image: url("./images/subscribe.jpg");
+  background-image: url("../images/subscribe.jpg");
   background-size: cover;
   position: relative;
   color: white;
